--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Raylcar - Car Rental</title>
-    <link rel="icon" type="image/png" href="assets/images/logo-web.png">
+    <link rel="icon" type="image/png" href="./assets/images/logo-web.png">
     <link href="https://fonts.googleapis.com/css?family=Cairo:400,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400i,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.png" />
     <link rel="stylesheet" type="text/css" href="http://cdn.bootstrapmb.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/nice-select.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/slick.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/main-color.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/animate.min.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/nice-select.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/slick.min.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/main-color.css">
 </head>
 <body class="biolife-body">
 
@@ -58,7 +58,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-2 col-md-6 col-xs-6">
-                        <a href="index.html" class="biolife-logo"><img src="assets/images/organic-3.png" alt="biolife logo" width="135" height="34"></a>
+                        <a href="index.html" class="biolife-logo"><img src="./assets/images/organic-3.png" alt="biolife logo" width="135" height="34"></a>
                     </div>
                     <div class="col-lg-6 col-md-7 hidden-sm hidden-xs">
                         <div class="primary-menu">
@@ -171,7 +171,7 @@
                                                                 <div class="contain-product none-overlay">
                                                                     <div class="product-thumb">
                                                                         <a href="Scategory_A_grid_lsidebar.html" class="link-to-product">
-                                                                            <img src="assets/images/car/BWM Sedan 3.png" alt="dd" width="270" height="270" class="product-thumnail">
+                                                                            <img src="./assets/images/car/BWM Sedan 3.png" alt="dd" width="270" height="270" class="product-thumnail">
                                                                         </a>
                                                                     </div>
                                                                     <div class="info">
@@ -221,7 +221,7 @@
                                                                     <div class="contain-product none-overlay">
                                                                         <div class="product-thumb">
                                                                             <a href="category_A_grid_lsidebar.html" class="link-to-product">
-                                                                                <img src="assets/images/car/BWM Sedan 2.png" alt="dd" width="270" height="270" class="product-thumnail">
+                                                                                <img src="./assets/images/car/BWM Sedan 2.png" alt="dd" width="270" height="270" class="product-thumnail">
                                                                             </a>
                                                                         </div>
                                                                         <div class="info">
@@ -280,7 +280,7 @@
                             <div class="media">
                                 <div class="child-elememt">
                                     <a href="#" class="link-to">
-                                        <img src="assets/images/home-03/slide-01-child-01.png" width="804" height="580" alt="">
+                                        <img src="./assets/images/home-03/slide-01-child-01.png" width="804" height="580" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -289,7 +289,7 @@
                                 <h3 class="second-line">2015 Bentley Flying Spur</h3>
                                 <p class="third-line">6.6L V8 32V DDI OHV Turbo Diesel, Color: White</p>
                                 <p class="buttons">
-                                    <a href="#" class="btn btn-bold">Rent</a>
+                                    <a href="checkout.html" class="btn btn-bold">Rent</a>
                                     <a href="category_A_grid_lsidebar.html" class="btn btn-thin">View shop-page</a>
                                 </p>
                             </div>
@@ -299,8 +299,8 @@
                         <div class="slide-contain slider-opt03__layout01">
                             <div class="media">
                                 <div class="child-elememt">
-                                    <a href="#" class="link-to">
-                                        <img src="assets/images/home-03/slide-01-child-01.png" width="804" height="580" alt="">
+                                    <a href="checkout.html" class="link-to">
+                                        <img src="./assets/images/home-03/slide-01-child-01.png" width="804" height="580" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -309,7 +309,7 @@
                                 <h3 class="second-line">2015 Bentley Flying Spur</h3>
                                 <p class="third-line">6.6L V8 32V DDI OHV Turbo Diesel,Color: White</p>
                                 <p class="buttons">
-                                    <a href="#" class="btn btn-bold">Rent</a>
+                                    <a href="checkout.html" class="btn btn-bold">Rent</a>
                                     <a href="category_A_grid_lsidebar.html" class="btn btn-thin">View shop-page</a>
                                 </p>
                             </div>
@@ -327,20 +327,20 @@
                                 <div class="banner-contain">
                                     <div class="media">
                                         <a href="#" class="bn-link">
-                                            <figure><img src="assets/images/home-03/bn_special_org.jpg" width="616" height="483" alt=""></figure>
+                                            <figure><img src="./assets/images/home-03/bn_special_org.jpg" width="616" height="483" alt=""></figure>
                                         </a>
                                     </div>
                                     <div class="text-content">
                                         <b class="first-line">Tesla Model X</b>
-                                        <span class="second-line">The Model X Plaid </span>
-                                        <span class="third-line">Has <i>Power & Acceleration</i></span>
+                                        <span class="second-line">The Model X Plaid Has</span>
+                                        <span class="third-line"> <i>Power & Acceleration</i></span>
                                         <div class="product-detail">
                                             <h4 class="product-name">National Fresh Fruit Production</h4>
                                             <div class="price price-contain">
                                                 <ins><span class="price-amount"><span class="currencySymbol">$</span>100.00/Day</span></ins>
                                             </div>
                                             <div class="buttons">
-                                                <a href="#" class="btn add-to-cart-btn">Veiw Gallery</a>
+                                                <a href="category_A_grid_lsidebar.html" class="btn add-to-cart-btn">Veiw Gallery</a>
                                             </div>
                                         </div>
                                     </div>
@@ -391,7 +391,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-9">
                         <section class="footer-item">
-                            <a class="logo footer-logo"><img src="assets/images/organic-3.png" alt="biolife logo" width="135" height="34"></a>
+                            <a class="logo footer-logo"><img src="./assets/images/organic-3.png" alt="biolife logo" width="135" height="34"></a>
                             <div class="footer-phone-info">
                                 <i class="biolife-icon icon-head-phone"></i>
                                 <p class="r-info">
@@ -474,11 +474,11 @@
                     <div class="col-lg-6 col-sm-6 col-xs-12">
                         <div class="payment-methods">
                             <ul>
-                                <li><img src="assets/images/card1.jpg" width="51" height="36" alt=""></a></li>
-                                <li><img src="assets/images/card2.jpg" width="51" height="36" alt=""></a></li>
-                                <li><img src="assets/images/card3.jpg" width="51" height="36" alt=""></a></li>
-                                <li><img src="assets/images/card4.jpg" width="51" height="36" alt=""></a></li>
-                                <li><img src="assets/images/card5.jpg" width="51" height="36" alt=""></a></li>
+                                <li><img src="./assets/images/card1.jpg" width="51" height="36" alt=""></a></li>
+                                <li><img src="./assets/images/card2.jpg" width="51" height="36" alt=""></a></li>
+                                <li><img src="./assets/images/card3.jpg" width="51" height="36" alt=""></a></li>
+                                <li><img src="./assets/images/card4.jpg" width="51" height="36" alt=""></a></li>
+                                <li><img src="./assets/images/card5.jpg" width="51" height="36" alt=""></a></li>
                             </ul>
                         </div>
                     </div>
@@ -557,15 +557,15 @@
     </script>
     
 
-    <script src="assets/js/search.js"></script>
-    <script src="assets/js/cart.js"></script>
-    <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <script src="./assets/js/search.js"></script>
+    <script src="./assets/js/cart.js"></script>
+    <script src="./assets/js/jquery-3.4.1.min.js"></script>
     <script src="http://cdn.bootstrapmb.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery.countdown.min.js"></script>
-    <script src="assets/js/jquery.nice-select.min.js"></script>
-    <script src="assets/js/jquery.nicescroll.min.js"></script>
-    <script src="assets/js/slick.min.js"></script>
-    <script src="assets/js/biolife.framework.js"></script>
-    <script src="assets/js/functions.js"></script>
+    <script src="./assets/js/jquery.countdown.min.js"></script>
+    <script src="./assets/js/jquery.nice-select.min.js"></script>
+    <script src="./assets/js/jquery.nicescroll.min.js"></script>
+    <script src="./assets/js/slick.min.js"></script>
+    <script src="./assets/js/biolife.framework.js"></script>
+    <script src="./assets/js/functions.js"></script>
 </body>
 </html>
