--- a/Category_Wagon.html
+++ b/Category_Wagon.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Raylcar - Car Rental</title>
-    <link rel="icon" type="image/png" href="assets/images/logo-web.png">
+    <link rel="icon" type="image/png" href="./assets/images/logo-web.png">
     <link href="https://fonts.googleapis.com/css?family=Cairo:400,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400i,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.png" />
     <link rel="stylesheet" type="text/css" href="http://cdn.bootstrapmb.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/nice-select.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/slick.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/main-color.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/animate.min.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/nice-select.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/slick.min.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/main-color.css">
 </head>
 <body class="biolife-body">
     
@@ -59,7 +59,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-2 col-md-6 col-xs-6">
-                        <a href="index.html" class="biolife-logo"><img src="assets/images/organic-3.png" alt="biolife logo" width="135" height="34"></a>
+                        <a href="index.html" class="biolife-logo"><img src="./assets/images/organic-3.png" alt="biolife logo" width="135" height="34"></a>
                     </div>
                     <div class="col-lg-6 col-md-7 hidden-sm hidden-xs">
                         <div class="primary-menu">
@@ -172,7 +172,7 @@
                                                                 <div class="contain-product none-overlay">
                                                                     <div class="product-thumb">
                                                                         <a href="Scategory_A_grid_lsidebar.html" class="link-to-product">
-                                                                            <img src="assets/images/car/BWM Sedan 3.png" alt="dd" width="270" height="270" class="product-thumnail">
+                                                                            <img src="./assets/images/car/BWM Sedan 3.png" alt="dd" width="270" height="270" class="product-thumnail">
                                                                         </a>
                                                                     </div>
                                                                     <div class="info">
@@ -222,7 +222,7 @@
                                                                     <div class="contain-product none-overlay">
                                                                         <div class="product-thumb">
                                                                             <a href="category_A_grid_lsidebar.html" class="link-to-product">
-                                                                                <img src="assets/images/car/BWM Sedan 2.png" alt="dd" width="270" height="270" class="product-thumnail">
+                                                                                <img src="./assets/images/car/BWM Sedan 2.png" alt="dd" width="270" height="270" class="product-thumnail">
                                                                             </a>
                                                                         </div>
                                                                         <div class="info">
@@ -329,7 +329,7 @@
                                     <div class="contain-product layout-default">
                                         <div class="product-thumb">
                                             <a href="#" class="link-to-product">
-                                                <img src="assets/images/car/BWM Wagon.png" alt="dd" width="270" height="270" class="product-thumnail">
+                                                <img src="./assets/images/car/BWM Wagon.png" alt="dd" width="270" height="270" class="product-thumnail">
                                             </a>
                                         </div>
                                         <div class="info">
@@ -357,7 +357,7 @@
                                     <div class="contain-product layout-default">
                                         <div class="product-thumb">
                                             <a href="#" class="link-to-product">
-                                                <img src="assets/images/car/Mazda Wagon.jpeg" alt="dd" width="270" height="270" class="product-thumnail">
+                                                <img src="./assets/images/car/Mazda Wagon.jpeg" alt="dd" width="270" height="270" class="product-thumnail">
                                             </a>
                                         </div>
                                         <div class="info">
@@ -385,7 +385,7 @@
                                     <div class="contain-product layout-default">
                                         <div class="product-thumb">
                                             <a href="#" class="link-to-product">
-                                                <img src="assets/images/car/Ford Wagon.jpeg" alt="dd" width="270" height="270" class="product-thumnail">
+                                                <img src="./assets/images/car/Ford Wagon.jpeg" alt="dd" width="270" height="270" class="product-thumnail">
                                             </a>
                                         </div>
                                         <div class="info">
@@ -430,7 +430,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-9">
                         <section class="footer-item">
-                            <a class="logo footer-logo"><img src="assets/images/organic-3.png" alt="biolife logo" width="135" height="34"></a>
+                            <a class="logo footer-logo"><img src="./assets/images/organic-3.png" alt="biolife logo" width="135" height="34"></a>
                             <div class="footer-phone-info">
                                 <i class="biolife-icon icon-head-phone"></i>
                                 <p class="r-info">
@@ -513,11 +513,11 @@
                     <div class="col-lg-6 col-sm-6 col-xs-12">
                         <div class="payment-methods">
                             <ul>
-                                <li><img src="assets/images/card1.jpg" width="51" height="36" alt=""></a></li>
-                                <li><img src="assets/images/card2.jpg" width="51" height="36" alt=""></a></li>
-                                <li><img src="assets/images/card3.jpg" width="51" height="36" alt=""></a></li>
-                                <li><img src="assets/images/card4.jpg" width="51" height="36" alt=""></a></li>
-                                <li><img src="assets/images/card5.jpg" width="51" height="36" alt=""></a></li>
+                                <li><img src="./assets/images/card1.jpg" width="51" height="36" alt=""></a></li>
+                                <li><img src="./assets/images/card2.jpg" width="51" height="36" alt=""></a></li>
+                                <li><img src="./assets/images/card3.jpg" width="51" height="36" alt=""></a></li>
+                                <li><img src="./assets/images/card4.jpg" width="51" height="36" alt=""></a></li>
+                                <li><img src="./assets/images/card5.jpg" width="51" height="36" alt=""></a></li>
                             </ul>
                         </div>
                     </div>
@@ -593,15 +593,15 @@
     </script>
         
    
-    <script src="assets/js/search.js"></script>
-    <script src="assets/js/cart.js"></script>
-    <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <script src="./assets/js/search.js"></script>
+    <script src="./assets/js/cart.js"></script>
+    <script src="./assets/js/jquery-3.4.1.min.js"></script>
     <script src="http://cdn.bootstrapmb.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery.countdown.min.js"></script>
-    <script src="assets/js/jquery.nice-select.min.js"></script>
-    <script src="assets/js/jquery.nicescroll.min.js"></script>
-    <script src="assets/js/slick.min.js"></script>
-    <script src="assets/js/biolife.framework.js"></script>
-    <script src="assets/js/functions.js"></script>
+    <script src="./assets/js/jquery.countdown.min.js"></script>
+    <script src="./assets/js/jquery.nice-select.min.js"></script>
+    <script src="./assets/js/jquery.nicescroll.min.js"></script>
+    <script src="./assets/js/slick.min.js"></script>
+    <script src="./assets/js/biolife.framework.js"></script>
+    <script src="./assets/js/functions.js"></script>
 </body>
 </html>
