--- a/Category_SUV.html
+++ b/Category_SUV.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400i,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="http://cdn.bootstrapmb.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.bootstrapmb.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/animate.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/nice-select.css">
@@ -596,7 +596,7 @@
     <script src="./assets/js/search.js"></script>
     <script src="./assets/js/cart.js"></script>
     <script src="./assets/js/jquery-3.4.1.min.js"></script>
-    <script src="http://cdn.bootstrapmb.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootstrapmb.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./assets/js/jquery.countdown.min.js"></script>
     <script src="./assets/js/jquery.nice-select.min.js"></script>
     <script src="./assets/js/jquery.nicescroll.min.js"></script>
